--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
           
 </head>
 <body>
+     <!--banner-->
+    <div class="intro deep-orange lighten-2 z-depth-1">
+			  <h1 class="grey-text text-lighten-5">narayan prusty</h1>
+			  <h5 class="grey lighten-4 grey-text text-darken-1">web and mobile developer</h5>
+	</div>
 
- <!--Import jQuery before materialize.js-->
+      <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
