changed links to a cdn

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 
 	<!--materialize stuff-->
-	 <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
 
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
           
@@ -20,8 +20,9 @@
 <body>
      <!--banner-->
     <div class="intro deep-orange lighten-2 z-depth-1">
-			  <h1 class="grey-text text-lighten-5">narayan prusty</h1>
-			  <h5 class="grey lighten-4 grey-text text-darken-1">web and mobile developer</h5>
+			  <h1 class="grey-text text-lighten-5">Victor Gichohi</h1>
+			  <h5 class="grey lighten-4 grey-text text-darken-1">UI | UX designer
+	</h5>
 	</div>
 
       <!--Import jQuery before materialize.js-->
