--- a/index.html
+++ b/index.html
@@ -24,6 +24,38 @@
 			  <h5 class="grey lighten-4 grey-text text-darken-1">UI | UX designer
 	</h5>
 	</div>
+	<!-- aboutme -->
+	<div class="container about">
+  <h5>about me</h5>
+  <h6>let me introduce my self</h6>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <hr>
+  <div class="row">
+    
+    <div class="col s12 m4 l4">
+      <h6>current jobs</h6>
+      <ul class="collapsible">
+        <li class="active">
+          <div class="collapsible-header"><i class="mdi-av-web"></i>Designer</div>
+          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Developer</div>
+          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Video Editor</div>
+          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Support Asst.</div>
+          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
