skills collapse header complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <!-- font awesome -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
           
 </head>
 <body>
@@ -36,20 +39,24 @@
       <h6>current jobs</h6>
       <ul class="collapsible">
         <li class="active">
-          <div class="collapsible-header"><i class="mdi-av-web"></i>Designer</div>
-          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+          <div class="collapsible-header"><i class="fa fa-html5"></i>
+HTML5</div>
+          <div class="collapsible-body"><p>am very conversant with the new features in html5 which bring better designs to the websites</p></div>
         </li>
         <li>
-          <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Developer</div>
-          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+          <div class="collapsible-header"><i class="fa fa-css3"></i>
+</i>CSS3</div>
+          <div class="collapsible-body"><p>The new css3 animation features are my favourite css3 features.:-)</p></div>
         </li>
         <li>
-          <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Video Editor</div>
-          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+          <div class="collapsible-header"><i class="fa fa-java"></i>
+</i>Javascript</div>
+          <div class="collapsible-body"><p>DOM manipulation.My favourite web design task.am very conversant with it to make responsive websites.</p></div>
         </li>
         <li>
-          <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Support Asst.</div>
-          <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+          <div class="collapsible-header"><i class="fa fa-camera"></i>
+</i>Photography</div>
+          <div class="collapsible-body"><p>I have a very keen eye in photography.Combined with my webdesigning skills,i design elegant websites with beautiful images.</p></div>
         </li>
       </ul>
     </div>
