--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@ HTML5</div>
   </div>
 </div>
 
+    <!-- portfolio -->
+     <div class="container portfolio">
+  <h5>portfolio</h5>
+  <h6>MY LATEST PROJECTS</h6>
+  <hr>
+  <div class="row">
+    <div class="col s12 m12 l12 portfolio-holder">
+      <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+      <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+      <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+    
+    </div>
+  </div>
+</div>
+<!--contact-->
+
+
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
