--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ HTML5</div>
 <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
 
         <script src="js/index.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
 
 </body>
 </html>
