--- a/index.html
+++ b/index.html
@@ -23,10 +23,25 @@
 </head>
 <body>
      <!--banner-->
-    <div class="intro deep-orange lighten-2 z-depth-1">
+    <div class="intro">
 			  <h1 class="grey-text text-lighten-5">Victor Gichohi</h1>
 			  <h5 class="grey lighten-4 grey-text text-darken-1">UI | UX designer
 	</h5>
+	          <div class="social">
+	           <a href="https://github.com/Victorgichohi" target="_blank">
+	           <i class="fa fa-github fa-4x"></i>
+	           </a>
+
+             <a href="https://ke.linkedin.com/pub/victor-nderitu/a8/33b/415" target="_blank">
+              <i class="fa fa-linkedin fa-4x"></i>
+              </a>
+
+              <a href="google.com/+victorgichohi" target="_blank">
+              <i class="fa fa-google fa-4x"></i>
+              </a>
+
+
+	        </div>
 	</div>
 	<!-- aboutme -->
 	<div class="container about">
