added a description about myself

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <i class="fa fa-linkedin fa-4x"></i>
               </a>
 
-              <a href="google.com/+victorgichohi" target="_blank">
+              <a href="https://google.com/+victorgichohi" target="_blank">
               <i class="fa fa-google fa-4x"></i>
               </a>
 
@@ -46,13 +46,13 @@
 	<!-- aboutme -->
 	<div class="container about">
   <h5>about me</h5>
-  <h6>let me introduce my self</h6>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  
+  <p>Am a web developer based in Kenya.I develope responsive websites with elegant designs.If am not behind my laptop,i'll be probably doing some photography or travelling.Feel free to contact me,formal or informal,am always available for cofee :-)</p>
   
   <div class="row">
     
     <div class="col s6">
-      <h6>skills</h6>
+      <h3 style="allign:center;">skills</h3>
       <ul class="collapsible">
         <li class="active">
           <div class="collapsible-header"><i class="fa fa-html5"></i>
