--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="row">
     
     <div class="col s6">
-      <h3 style="allign:center;">skills</h3>
+      <h3>skills</h3>
       <ul class="collapsible">
         <li class="active">
           <div class="collapsible-header"><i class="fa fa-html5"></i>
