--- a/index.html
+++ b/index.html
@@ -90,15 +90,21 @@ HTML5</div>
   <h5>portfolio</h5>
   <h6>MY LATEST PROJECTS</h6>
   <hr>
-  <div class="row">
-    <div class="col s12 m12 l12 portfolio-holder">
-      <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-      <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-      <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+  <div class="row img1">
+    <div class="col s6 l12 portfolio-holder">
+      <img class=" materialboxed" src="assets/mkulimanet.png">
+      <a href="http://mkulimanet.bitballoon.com/" target="_blank" >Mkulimanet</a>
+      </div>
+      <div class="row img2">
+       <div class="col s6  l12 portfolio-holder">
+      <img class=" materialboxed" src="assets/delani.png">
+      <a href="http://mkulimanet.bitballoon.com/" target="_blank">delanistudio</a>
+      </div>
+     </div>
     
     </div>
   </div>
-</div>
+
 <!--contact-->
   
    <div class="container contact">
