--- a/index.html
+++ b/index.html
@@ -93,12 +93,16 @@ HTML5</div>
   <div class="row img1">
     <div class="col s6 l12 portfolio-holder">
       <img class=" materialboxed" src="assets/mkulimanet.png">
-      <a href="http://mkulimanet.bitballoon.com/" target="_blank" >Mkulimanet</a>
+      <div class="col s6">
+      <a href="http://mkulimanet.bitballoon.com/" target="_blank">Mkulimanet</a>
+      </div>
       </div>
       <div class="row img2">
        <div class="col s6  l12 portfolio-holder">
       <img class=" materialboxed" src="assets/delani.png">
-      <a href="http://mkulimanet.bitballoon.com/" target="_blank">delanistudio</a>
+       <div class="col s6">
+      <a href="http://delani.bitballoon.com/" target="_blank">delanistudio</a>
+      </div>
       </div>
      </div>
     
@@ -120,17 +124,14 @@ HTML5</div>
                     <input id="first_name" type="text" class="validate">
                     <label for="first_name">First Name</label>
                   </div>
+                   <div class="row">
                   <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate">
-                    <label for="last_name">Last Name</label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="input-field col s12">
                     <input id="email" type="email" class="validate">
                     <label for="email">E-Mail</label>
                   </div>
                 </div>
+                </div>
+               
                 <textarea class="materialize-textarea" placeholder="Your Message" required></textarea>
                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                   <i class="mdi-content-send right"></i>
