--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="portfolio" content="Am a UX|UI designer based in Kenya.I develope elegant and responsive website.">
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 
+     <!--google fonts-->
+     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+
 	<!--materialize stuff-->
 	 <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
 	  <!-- Compiled and minified CSS -->
@@ -45,10 +48,11 @@
 	</div>
 	<!-- aboutme -->
 	<div class="container about">
+	<div class="me">
   <h5>about me</h5>
   
   <p>Am a web developer based in Kenya.I develope responsive websites with elegant designs.If am not behind my laptop,i'll be probably doing some photography or travelling.Feel free to contact me,formal or informal,am always available for cofee :-)</p>
-  
+  </div>
   <div class="row">
     
     <div class="col s6">
