misspelled words changed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>portfolio</title>
+	<title>victorgichohi</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<meta name="portfolio" content="Am a UX|UI designer based in Kenya.I develope elegant and responsive website.">
@@ -51,7 +51,7 @@
 	<div class="me">
   <h5>about me</h5>
   
-  <p>Am a web developer based in Kenya.I develope responsive websites with elegant designs.If am not behind my laptop,i'll be probably doing some photography or travelling.Feel free to contact me,formal or informal,am always available for cofee :-)</p>
+  <p>Am a web developer based in Kenya.I develope responsive websites with elegant designs.If am not behind my laptop,i'll be probably doing some photography or travelling.Feel free to contact me,formal or informal,am always available for coffee :-)</p>
   </div>
   <div class="row">
     
