--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <!-- font awesome -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+     <!--get jquery-->
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/typed.js" type="text/javascript"></script>
 
           
 </head>
