changed some spelling mistakes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="me">
   <h5>about me</h5>
   
-  <p>Am a web developer based in Kenya.I develope responsive websites with elegant designs.If am not behind my laptop,i'll be probably doing some photography or travelling.Feel free to contact me,formal or informal,am always available for coffee :-)</p>
+  <p>Am a web developer based in Kenya.I develop responsive websites with elegant designs.If am not behind my laptop,i'll be probably doing some photography or travelling.Feel free to contact me,formal or informal,am always available for coffee :-)</p>
   </div>
   <div class="row">
     
