--- a/index.html
+++ b/index.html
@@ -113,31 +113,22 @@ HTML5</div>
    
 </div>
      </div>
-    <!-- portfolio 
-    <div id="porto">
-     <div class="container portfolio">
-  <h5>portfolio</h5>
-  <h6>MY LATEST PROJECTS</h6>
-  <hr>
-  <div class="row img1">
-    <div class="col s6 l12 portfolio-holder">
-      <img class=" materialboxed" src="assets/mkulimanet.png">
-      <div class="col s6">
-      <a href="http://mkulimanet.bitballoon.com/" target="_blank">Mkulimanet</a>
+   <!-- portfolio -->
+   <div class="container portfolio">
+        <h5>portfolio</h5>
+        <h6>MY LATEST PROJECTS</h6>
+        <hr>
+        <div class="row">
+          <div class="col s12 m12 l12 portfolio-holder">
+            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          </div>
+        </div>
       </div>
-      </div>
-      <div class="row img2">
-       <div class="col s6  l12 portfolio-holder">
-      <img class=" materialboxed" src="assets/delani.png">
-       <div class="col s6">
-      <a href="http://delani.bitballoon.com/" target="_blank">delanistudio</a>
-      </div>
-      </div>
-     </div>
-    
-    </div>
-  </div>
-  </div>
 
 <!--contact-->
   <div id="contact">
