--- a/index.html
+++ b/index.html
@@ -119,15 +119,16 @@ HTML5</div>
         <h6>MY LATEST PROJECTS</h6>
         <hr>
         <div class="row">
-          <div class="col s12 m12 l12 portfolio-holder">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-          </div>
-        </div>
+          <div class="col s6 m12 l12 portfolio-holder">
+            <img class="one materialboxed" src="assets/mkulimanet.png">
+            </div>
+           </div>
+            <div class="row">
+            <div class="col s6 l12 portfolio-holder2">
+            <img class="two materialboxed " src="assets/delani.png">
+            </div>
+         </div>
+      </div>
       </div>
 
 <!--contact-->
