--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div id="body">
-    <!--navigation
+    <!--navigation-->
     <div id="navigation">
         <a href="#banner">Home</a>
         <a href="#about">Skills</a>
@@ -39,7 +39,7 @@
         <a href="#contact">Contact</a>
        
   </div>
-  -->
+  
      <!--banner-->
      <div class="row">
           <div class="col s12">        
@@ -165,7 +165,8 @@ HTML5</div>
           </div>
   </div>
 </div>
-           
+         <!-- back to top button   -->
+         <a href="#" class="back-to-top">Back to Top</a>
     <!--google analytics-->
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
