--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/typed.js" type="text/javascript"></script>
 
+    <!-- jquery -->
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
    
           
 </head>
@@ -165,8 +169,7 @@ HTML5</div>
           </div>
   </div>
 </div>
-         <!-- back to top button   -->
-         <a href="#" class="back-to-top">Back to Top</a>
+         
     <!--google analytics-->
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -204,6 +207,10 @@ HTML5</div>
 
         <script src="js/index.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
+<a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
 
+
+<!-- ICON NEEDS FONT AWESOME FOR CHEVRON UP ICON -->
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </body>
 </html>
