back to top icon through

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
+
+
    
           
 </head>
@@ -169,6 +171,9 @@ HTML5</div>
           </div>
   </div>
 </div>
+<!-- back to top -->
+<a src="js/main.js" id="return-to-top"><i class="fa fa-chevron-up"></i>
+</a>
          
     <!--google analytics-->
     <script>
@@ -207,10 +212,10 @@ HTML5</div>
 
         <script src="js/index.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
-<a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
 
 
-<!-- ICON NEEDS FONT AWESOME FOR CHEVRON UP ICON -->
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
+
+
 </body>
 </html>
