added another down button to move to porto div

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
 <div id="body">
-  
+
 
      <!--banner-->
 <div id="fullpage">
@@ -87,7 +87,7 @@
 
   <p>Am a web developer based in Kenya.I develop responsive websites with elegant designs.If am not behind my laptop,ill be probably doing some photography or travelling.Feel free to contact me,formal or informal,am always available for coffee :-)</p>
   </div>
-  <div class="row">
+  <div class="row skills">
 
     <div class="col s6">
       <h3>skills</h3>
@@ -113,6 +113,8 @@ HTML5</div>
           <div class="collapsible-body"><p>I have a very keen eye in photography.Combined with my webdesigning skills,i design elegant websites with beautiful images.</p></div>
         </li>
       </ul>
+			<a href="#porto"><i class="porto_button fa fa-angle-down fa-4x"></i></a>
+
     </div>
 
 <div class="col s6 chart">
