button moving to portfolio complete

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@ HTML5</div>
           <div class="collapsible-body"><p>I have a very keen eye in photography.Combined with my webdesigning skills,i design elegant websites with beautiful images.</p></div>
         </li>
       </ul>
-			<a href="#porto"><i class="porto_button fa fa-angle-down fa-4x"></i></a>
+			<a href="#porto"><i class="porto_button fa fa-angle-down fa-4x hvr-hang"></i></a>
 
     </div>
 
 <div class="col s6 chart">
    	 <!-- skills char -->
-      <div id="piechart" style="width: 500px; height: 300px;"></div>
+      <div id="piechart" style="width: 500px; height: 250px;"></div>
    </div>
   </div>
 
