--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
           <div id="banner">
     <div class="intro">
 			  <h1 class="grey-text text-lighten-5">Victor Gichohi</h1>
-			  <h5 class="grey lighten-4 grey-text text-darken-1">UI | UX designer
+			  <h5 class="grey lighten-4 grey-text text-darken-1 hvr-reveal">UI | UX designer
 	</h5>
 	          <div class="social">
 	           <a href="https://github.com/Victorgichohi" target="_blank">
-	           <i class="fa fa-github fa-4x"></i>
+	           <i class="fa fa-github fa-4x hvr-buzz"></i>
 	           </a>
 
              <a href="https://ke.linkedin.com/pub/victor-nderitu/a8/33b/415" target="_blank">
-              <i class="fa fa-linkedin fa-4x"></i>
+              <i class="fa fa-linkedin fa-4x hvr-buzz"></i>
               </a>
 
               <a href="https://google.com/+victorgichohi" target="_blank">
-              <i class="fa fa-google fa-4x"></i>
+              <i class="fa fa-google fa-4x hvr-buzz"></i>
               </a>
 
 
