added bounce in animation to the header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <!-- hover css -->
 <link href="css/hover-min.css" rel="stylesheet">
 
-
+<!-- animate css -->
+  <link rel="stylesheet" href="css/animate.min.css">
 
 
 </head>
@@ -47,7 +48,7 @@
           <div class="col s12">
           <div id="banner">
     <div class="intro">
-			  <h1 class="grey-text text-lighten-5">Victor Gichohi</h1>
+			  <h1 class="grey-text text-lighten-5 animated bounceInDown">Victor Gichohi</h1>
 			  <h5 class="grey lighten-4 grey-text text-darken-1 hvr-reveal">UI | UX designer
 	</h5>
 	          <div class="social">
