--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div id="banner">
     <div class="intro">
 			  <h1 class="grey-text text-lighten-5 animated bounceInDown">Victor Gichohi</h1>
-			  <h5 class="grey lighten-4 grey-text text-darken-1 hvr-reveal">UI | UX designer
+			  <h5 class="grey lighten-4 grey-text text-darken-1 hvr-reveal animated bounceInLeft">UI | UX designer
 	</h5>
 	          <div class="social">
 	           <a href="https://github.com/Victorgichohi" target="_blank">
