--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
 	</h5>
 	          <div class="social">
 	           <a href="https://github.com/Victorgichohi" target="_blank">
-	           <i class="fa fa-github fa-4x hvr-buzz"></i>
+	           <i class="fa fa-github fa-4x hvr-buzz  animated bounceInRight wobble"></i>
 	           </a>
 
              <a href="https://ke.linkedin.com/pub/victor-nderitu/a8/33b/415" target="_blank">
-              <i class="fa fa-linkedin fa-4x hvr-buzz"></i>
+              <i class="fa fa-linkedin fa-4x hvr-buzz  animated  bounceInRight wobble"></i>
               </a>
 
               <a href="https://google.com/+victorgichohi" target="_blank">
-              <i class="fa fa-google fa-4x hvr-buzz"></i>
+              <i class="fa fa-google fa-4x hvr-buzz  animated  bounceInRight wobble"></i>
               </a>
 
 
 	    </div>
 			<a href="#about">
-				<i class="about_button fa fa-arrow-down fa-4x hvr-icon-down"></i>
+				<i class="about_button fa fa-arrow-down fa-4x hvr-icon-down animated bounceInUp"></i>
 
 			</a>
 	</div>
