--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 	</h5>
 	          <div class="social">
 	           <a href="https://github.com/Victorgichohi" target="_blank">
-	           <i class="fa fa-github fa-4x hvr-buzz  animated bounceInRight wobble"></i>
+	           <i class="fa fa-github fa-4x hvr-buzz"></i>
 	           </a>
 
              <a href="https://ke.linkedin.com/pub/victor-nderitu/a8/33b/415" target="_blank">
-              <i class="fa fa-linkedin fa-4x hvr-buzz  animated  bounceInRight wobble"></i>
+              <i class="fa fa-linkedin fa-4x hvr-buzz  "></i>
               </a>
 
               <a href="https://google.com/+victorgichohi" target="_blank">
-              <i class="fa fa-google fa-4x hvr-buzz  animated  bounceInRight wobble"></i>
+              <i class="fa fa-google fa-4x hvr-buzz "></i>
               </a>
 
 
