resized the images for the portfolio

--- a/index.html
+++ b/index.html
@@ -133,14 +133,13 @@ HTML5</div>
         <h6>MY LATEST PROJECTS</h6>
         <hr>
         <div class="row">
-          <div class="col s6 m12 l12 portfolio-holder">
-            <img class="one materialboxed" src="assets/mkulimanet.png">
+          <div class="col s6">
+          <img class="materialboxed" width="400" src="assets/mkulimanet.png">
 
             </div>
-           </div>
-            <div class="row">
-            <div class="col s6 l12 portfolio-holder2">
-            <img class="two materialboxed " src="assets/delani.png">
+
+            <div class="col s6">
+          <img class="materialboxed" width="400" src="assets/delani.png">
             </div>
          </div>
       </div>
