through with the porto div

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ HTML5</div>
         <h5>portfolio</h5>
         <h6>MY LATEST PROJECTS</h6>
         <hr>
-        <div class="row">
+        <div class="row images">
           <div class="col s6">
           <img class="materialboxed" width="400" src="assets/mkulimanet.png">
 
