added projects websites links

--- a/index.html
+++ b/index.html
@@ -134,12 +134,15 @@ HTML5</div>
         <hr>
         <div class="row images">
           <div class="col s6">
-          <img class="materialboxed" width="400" src="assets/mkulimanet.png">
+
+						 <img class="materialboxed" width="400" src="assets/mkulimanet.png">
+					 <a href="http://mkulimanet.bitballoon.com/" target="_blank">MkulimaNet</a>
 
             </div>
 
             <div class="col s6">
           <img class="materialboxed" width="400" src="assets/delani.png">
+					<a href="http://delani.bitballoon.com/" target="_blank">DelaniStudio</a>
             </div>
          </div>
       </div>
