--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="col s12">
           <div id="banner">
     <div class="intro">
-			  <h1 class="grey-text text-lighten-5 animated bounceInDown">Victor Gichohi</h1>
+			  <h1 class="grey-text text-lighten-5 animated flipInY">Victor Gichohi</h1>
 			  <h5 class="grey lighten-4 grey-text text-darken-1 hvr-reveal animated bounceInLeft">UI | UX designer
 	</h5>
 	          <div class="social">
@@ -56,7 +56,8 @@
 	           <i class="fa fa-github fa-4x hvr-buzz"></i>
 	           </a>
 
-             <a href="https://ke.linkedin.com/pub/victor-nderitu/a8/33b/415" target="_blank">
+      on
+			       <a href="https://ke.linkedin.com/pub/victor-nderitu/a8/33b/415" target="_blank">
               <i class="fa fa-linkedin fa-4x hvr-buzz  "></i>
               </a>
 
@@ -67,7 +68,7 @@
 
 	    </div>
 			<a href="#about">
-				<i class="about_button fa fa-arrow-down fa-4x hvr-icon-down animated bounceInUp"></i>
+				<i class="about_button fa fa-arrow-down fa-4x hvr-icon-down animated slideInDown"></i>
 
 			</a>
 	</div>
@@ -160,7 +161,7 @@ HTML5</div>
                 <div class="row">
                   <div class="input-field col s6">
                     <input id="first_name" type="text" class="validate">
-                    <label for="first_name">First Name</label>
+                    <label for="first_name">Name</label>
                   </div>
                    <div class="row">
                   <div class="input-field col s6">
