--- a/index.html
+++ b/index.html
@@ -157,22 +157,24 @@ HTML5</div>
         <div class="row">
           <div class="col s12 m6 l6">
             <div class="row">
-              <form class="col s12">
+							<!-- formspree -->
+              <form class="col s12" action="//formspree.io/victorgichohi48@gmail.com"
+      method="POST">
                 <div class="row">
                   <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate">
+                    <input id="first_name" type="text" class="validate" name="name">
                     <label for="first_name">Name</label>
                   </div>
                    <div class="row">
                   <div class="input-field col s6">
-                    <input id="email" type="email" class="validate">
+                    <input id="email" type="email" class="validate" name="_replyto">
                     <label for="email">E-Mail</label>
                   </div>
                 </div>
                 </div>
 
                 <textarea class="materialize-textarea" placeholder="Your Message" required></textarea>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <button class="btn waves-effect waves-light" type="submit" name="action" value="send">Submit
                   <i class="mdi-content-send right"></i>
                 </button>
               </form>
