still testing this form thing

--- a/index.html
+++ b/index.html
@@ -158,25 +158,22 @@ HTML5</div>
           <div class="col s12 m6 l6">
             <div class="row">
 							<!-- formspree -->
-              <form class="col s12" action="//formspree.io/victorgichohi48@gmail.com"
-      method="POST">
+              <form class="col s12" method="POST" action="http://formspree.io/victorgichohi48@gmail.com">
                 <div class="row">
                   <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate" name="name">
+                    <input id="first_name" type="text" name="name" class="validate" >
                     <label for="first_name">Name</label>
                   </div>
                    <div class="row">
                   <div class="input-field col s6">
-                    <input id="email" type="email" class="validate" name="_replyto">
+                    <input id="email" type="email" name="_replyto" class="validate" >
                     <label for="email">E-Mail</label>
                   </div>
                 </div>
                 </div>
 
                 <textarea class="materialize-textarea" placeholder="Your Message" required></textarea>
-                <button class="btn waves-effect waves-light" type="submit" name="action" value="send">Submit
-                  <i class="mdi-content-send right"></i>
-                </button>
+                <input type="submit" value="Send">
               </form>
             </div>
           </div>
