changed the text showing ux|ui designer

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
           <div id="banner">
     <div class="intro">
 			  <h1 class="grey-text text-lighten-5 animated flipInY">Victor Gichohi</h1>
-			  <h5 class="grey lighten-4 grey-text text-darken-1 hvr-reveal animated bounceInLeft">UI | UX designer
+			  <h5 class="grey lighten-4 grey-text text-darken-1 hvr-reveal animated bounceInLeft">Android | Web Developer
 	</h5>
 	          <div class="social">
 	           <a href="https://github.com/Victorgichohi" target="_blank">
 	           <i class="fa fa-github fa-4x hvr-buzz"></i>
 	           </a>
 
-      on
+  
 			       <a href="https://ke.linkedin.com/pub/victor-nderitu/a8/33b/415" target="_blank">
               <i class="fa fa-linkedin fa-4x hvr-buzz  "></i>
               </a>
